[package]
name = "cmd_lib_cf"
description = "Modified version of cmd_lib with CREATE_NO_WINDOW built in"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/amitka-rnd/rust_cmd_lib_cf"
repository = "https://github.com/amitka-rnd/rust_cmd_lib_cf"
documentation = "https://docs.rs/cmd_lib_cf"
keywords = ["shell", "script", "cli", "process", "pipe"]
categories = ["command-line-interface", "command-line-utilities"]
readme = "README.md"
version = "1.3.4"
authors = ["Amit Katz <callcraft456@gmail.com>"]
edition = "2018"

[workspace]
members = ["macros", "examples"]

[dependencies]
cmd_lib_cf_macros = { version = "1.3.1", path = "./macros" }
lazy_static = "1.4.0"
log = "0.4"
faccess = "0.2"
os_pipe = "0.9"

[dev-dependencies]
rayon = "1.5"
structopt = "0.3"
byte-unit = "4.0"
