[package]
name = "cmd_lib_cf_macros"
description = "Common rust commandline macros and utils, to write shell script like tasks easily"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rust-shell-script/rust_cmd_lib_cf"
repository = "https://github.com/rust-shell-script/rust_cmd_lib_cf"
keywords = ["shell", "script", "cli", "process", "pipe"]
version = "1.3.1"
authors = ["Amit Katz <callcraft456@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
